# amwrap

./: .flake8  .gitignore  .readthedocs.yaml  CLAUDE.md  MANIFEST.in  Makefile  README.rst  hatch_build.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: python-app.yml
amwrap/: __init__.py  climatology.py  constants.py  driver.py  model.py  plotting.py  thermo.py
amwrap/tests/: conftest.py  test_core.py  test_driver.py
docs/: requirements.txt
docs/source/: amwrap.rst  conf.py  index.rst  installation.rst  modules.rst
src/am-14.0/: INSTALLING  LICENSE  Makefile  REFERENCES  _README_  abscoeff.c  abscoeff.h  am_alloc.c  am_alloc.h  am_sysdep.c  am_sysdep.h  am_types.c  am_types.h  ch3cn.c  ch3cn.h  ch3oh.c  ch3oh.h  ch4.c  ch4.h  cia.c  cia.h  clo.c  clo.h  co.c  co.h  co2.c  co2.h  column.c  column.h  config.c  config.h  dcache.c  dcache.h  doc.c  doc.h  errlog.c  errlog.h  fileops.c  fileops.h  fit.c  (+93 more)
